syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.macmv.tankbattles.lib.proto";
option java_outer_classname = "MainProto";
option objc_class_prefix = "HLW";

// all the things ingame
service TankBattles {
  rpc PlayerJoin (PlayerJoinReq) returns (PlayerJoinRes);
  rpc PlayerEvent (PlayerEventReq) returns (PlayerEventRes);
}

// sent once from new player
message PlayerJoinReq {
  int32 id = 1;
  Tank tank = 2;
}

// sent to all players
message PlayerJoinRes {
  repeated Player player = 1;
  int32 mapId = 2; // TODO: maps
  int64 tick = 3;
}

// sent as often as possible, even if not moving
message PlayerEventReq {
  Player player = 1;
  Projectile projectile = 2;
  int64 tick = 3;
}

// sent to all players about new positions as often as possible
message PlayerEventRes {
  repeated Player player = 1;
  repeated Projectile projectile = 2;
  int64 tick = 3;
}

// is a single user ingame
message Player {
  int32 id = 1;
  Tank tank = 2;
  Point pos = 3;
  int32 direction = 4;
  Point turretDirection = 5;
}

// can be user or AI in or out of game, like when building a new loadout

// the weapon and base store current info, whereas things like max health and total time to reload
// are grabbed from a database of ids. This is to prevent people from having 0 reload / infinite health
message Tank {
  Weapon primary = 1;
  Base base = 3;
  Skin skin = 4;

  // all the weapon info
  message Weapon {
    int32 id = 1;
    int32 clipReload = 2;
    int32 singleReload = 3;
  }

  // drive base, so health/armor/speed
  message Base {
    int32 id = 1;
    int32 health = 2;
  }

  // probably id for skin table
  message Skin {
    string name = 1;
  }
}

message Projectile {
  Point pos = 1;
  Point vel = 2;
}

// that's just a point
message Point {
  float x = 1;
  float y = 2;
}
